[package]
name = "flags_derive"
version = "0.1.0"
edition = "2024"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
include.workspace = true

[lib]
proc-macro = true
[dependencies]
darling = "0.20.11"
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
